--- a/newgrid.html
+++ b/newgrid.html
@@ -3,93 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grid Practice</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <style>
-    #content{
-        display: grid;
-            grid-template-columns: repeat(12, 1fr);
-            grid-auto-rows: minmax(100px, auto);
-            grid-gap: 10px;
-            _max-width: 100vh;
-            margin: 0 auto;
-            height: 100vh;
-    }
-    #content>* {
-            background-color: #f72828;
-            padding: 30px;
-    }
-    aside{
-        grid-column: 1/2;
-        grid-row:1/8;
-        display:flex;
-        align-items:center;
-    }
-    header{
-        grid-column: 2/13;
-    }
-    
-    main{
-        grid-column: 2/13;
-        grid-row:2/4;
-        display:flex;
-        flex-direction:row;
-    }
-    .col-1-3 {
-        position:relative;
-        width:33.3%;
-        text-align: justify;
-        padding:15px;
-    }
-
-
-
-    section{
-        grid-column:2/13;
-        grid-row:4/7;
-        display:flex;
-    }
-    .col-1-2 {
-        width: 50%;
-        display: flex;
-        justify-content: center;
-        margin: 10px;
-
-    }
-    div.box{
-        width:100%;
-        height:250px;
-        border:1px solid black;
-        background-image: url('images/p2.jpg');
-        background-repeat: no-repeat;
-        background-size:cover;
-        background-position-y: center;
-
-    }
-    div.box2{
-        width:100%;
-        height:250px;
-        border:1px solid black;
-        background-image: url('images/p1.jpg');
-        background-repeat: no-repeat;
-        background-size:cover;
-        background-position-y: center;
-    }
-
-    img {
-        max-width: 100%;
-        height: auto;
-    }
-
-
-    footer{
-        grid-column:2/13;
-    }
 </style>
 <body>
     <div id="content">
         <header>
-            <h1>Header</h1>
+            <h1 style="font-family: cursive; line-height: 35px;">My Little 
+                <br>Peapod</h1>
         </header>
         <main>
             <div class="col-1-3">
@@ -103,7 +26,7 @@
               </div>
         </main>
         <aside>
-            <h1> Sidebar</h1>
+            <h1>Love, Aunt Teenie.</h1>
         </aside>
         <section>
             <div class="col-1-2">
@@ -118,7 +41,7 @@
                 </div>
         </section>
         <footer>
-            <h1>Footer</h1>
+            <h1>"A godchild fills your heart with love and joy as if they were your very own. A goddaughter is a treasure whose worth you cannot measure except by the love in your heart."</h1>
         </footer>
     </div>
 </body>
